--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BlunderLab</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/chessground@9.2.1/assets/chessground.base.css">
-    <link rel="stylesheet" href="https://unpkg.com/chessground@9.2.1/assets/chessground.brown.css">
-    <link rel="stylesheet" href="https://unpkg.com/chessground@9.2.1/assets/chessground.cburnett.css">
+    <link rel="stylesheet" href="./assets/chessground.base.css">
+    <link rel="stylesheet" href="./assets/chessground.brown.css">
+    <link rel="stylesheet" href="./assets/chessground.cburnett.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
-<header class="topbar">
+<main class="page">
     <h1 class="title">BlunderLab</h1>
 
-    <div class="controls">
+    <div id="board" class="board"></div>
+
+    <div class="controls" aria-label="Zugsteuerung">
         <button id="undoBtn" class="iconbtn" type="button" aria-label="Zurück" title="Zurück">←</button>
         <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor" title="Vor">→</button>
     </div>
-</header>
-
-<div id="board"></div>
+</main>
 
 <script type="module" src="./app.js"></script>
 </body>
+
 </html>
