--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div id="board" class="board"></div>
 
     <div class="controls" aria-label="Zugsteuerung">
-        <button id="undoBtn" class="iconbtn" type="button" aria-label="Zurück" title="Zurück">←</button>
-        <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor" title="Vor">→</button>
+        <button id="undoBtn" class="iconbtn" type="button" aria-label="Zurück">←</button>
+        <button id="resetBtn" class="iconbtn" type="button" aria-label="Reset">↺</button>
+        <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor">→</button>
     </div>
 </main>
 
