FEN anzeigen und laden

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         <button id="resetBtn" class="iconbtn" type="button" aria-label="Reset">↺</button>
         <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor">→</button>
     </div>
+
+    <div class="fenline">
+        <input
+                id="fenLine"
+                type="text"
+                spellcheck="false"
+                autocomplete="off"
+                placeholder="FEN"
+        />
+    </div>
+
+
 </main>
 
 <script type="module" src="./app.js"></script>
