Brett drehbar und Link zu lichess analyse

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button id="undoBtn" class="iconbtn" type="button" aria-label="Zurück">←</button>
         <button id="resetBtn" class="iconbtn" type="button" aria-label="Reset">↺</button>
         <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor">→</button>
+        <button id="flipBtn" class="iconbtn" type="button" aria-label="Brett drehen">⟲</button>
+        <button id="lichessBtn" class="iconbtn" type="button" aria-label="Lichess Analyse">🔍︎</button>
+
     </div>
 
     <div class="fenline">
