PGN clickable eingefügt

--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
 
     <div id="board" class="board" aria-label="Schachbrett"></div>
 
+    <div class="pgnline" id="pgnLine">
+        <div id="pgn"></div>
+    </div>
+
     <div class="controls" aria-label="Zugsteuerung">
         <button id="undoBtn" class="iconbtn" type="button" aria-label="Zurück">←</button>
         <button id="resetBtn" class="iconbtn" type="button" aria-label="Reset">↺</button>
         <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor">→</button>
-        <button id="flipBtn" class="iconbtn" type="button" aria-label="Brett drehen">⟲</button>
+        <button id="flipBtn" class="iconbtn" type="button" aria-label="Brett drehen">⇅</button>
         <button id="lichessBtn" class="iconbtn" type="button" aria-label="Lichess Analyse">🔍︎</button>
-
     </div>
+
 
     <div class="fenline">
         <input
