PGN Copy Button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="resetBtn" class="iconbtn" type="button" aria-label="Reset">↺</button>
         <button id="redoBtn" class="iconbtn" type="button" aria-label="Vor">→</button>
         <button id="flipBtn" class="iconbtn" type="button" aria-label="Brett drehen">⇅</button>
+        <button id="copyPgnBtn" class="iconbtn" type="button" aria-label="PGN kopieren" title="PGN kopieren">⎘</button>
         <button id="lichessBtn" class="iconbtn" type="button" aria-label="Lichess Analyse">🔍︎</button>
     </div>
 
