--- a/index.html
+++ b/index.html
@@ -34,13 +34,22 @@
         <input
                 id="fenLine"
                 type="text"
+                class="input-box"
                 spellcheck="false"
                 autocomplete="off"
                 placeholder="FEN"
                 aria-label="FEN"
         />
 
+  <input
+          id="pgnInput"
+          class="input-box"
+          placeholder="PGN einfügen …"
+   />
+    <button id="btnImportPgn" type="button" class="icon-btn text-btn">Import PGN</button>
+
 </main>
+
 
 <script type="module" src="./app.js"></script>
 </body>
