--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
     <div id="board" class="board" aria-label="Chess board"></div>
 
+    <!-- Mode toggle row: dedicated full-width row directly under the board -->
+    <div class="mode-row">
+        <div id="modeToggleBtn" role="group" aria-label="Mode toggle"></div>
+    </div>
+
     <div class="pgnline" id="pgnLine">
         <div id="pgn"></div>
     </div>
