chessground CSS hinzugefügt

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>BlunderLab</title>
 
     <!-- Local chessground assets (from lichess/chessground repo) -->
-    <link rel="stylesheet" href="./assets/chessground.base.css">
-    <link rel="stylesheet" href="./assets/chessground.brown.css">
-    <link rel="stylesheet" href="./assets/chessground.cburnett.css">
+    <link rel="stylesheet" href="./src/chessground.base.css">
+    <link rel="stylesheet" href="./src/chessground.brown.css">
+    <link rel="stylesheet" href="./src/chessground.cburnett.css">
 
     <link rel="stylesheet" href="./style.css">
 </head>
